CN/modules/ROOT/pages/v1.3/2.adoc

:sectnums:
:sectnumlevels: 5


== IvorySQL简介

=== 概述

IvorySQL是先进的，功能齐全的，与Oracle开源兼容的PostgreSQL，并坚定地承诺始终保持100%兼容，并直接替代最新的PostgreSQL。IvorySQL增加了一个“compatible_db”切换开关，用于在Oracle和PostgreSQL兼容模式之间切换。 IvorySQL的亮点之一是PL / iSQL过程语言，它支持oracle的PL/SQL语法和Oracle风格的包。

IvorySQL导入并增强了 https://github.com/orafce/orafce[Orafce]扩展以添加支持 具有多种 Oracle 兼容性功能，包括内置包、数据类型和转换函数。IvorySQL项目是在Apache 2许可证下发布的，并鼓励所有类型的贡献。

=== 产品目标和范围

我们致力于遵守 https://opensource.com/open-source-way[开源方式]的原则，我们坚信建立一个健康和包容的社区。我们坚持认为，好的想法可以来自任何地方。只有包括不同的观点，我们才能做出最好的决定。虽然IvorySQL的第一个版本主要关注Oracle兼容性功能，但未来的路线图和功能集将由社区以开源方式确定。

=== 核心特性

IvorySQL基于PostgreSQL数据库开发，与Oracle数据库兼容，具有强大的兼容性。适用于PostgreSQL数据库和Oracle数据库场景。

=== 竞争优势

* **核心开源**：IvorySQL的核心代码包括兼容功能全部在开源协议下公开，没有厂商的限制。并应用于瀚高股份数据库公司实例，且拥有一个活跃的开发者社区。
* **兼容Oracle**：可以将Oracle数据库迁移到IvorySQL。
* **可定制化**：只需下载代码，并按照你的想法自定义。

* **简单易用**：对系统管理员来说，IvorySQL 大幅降低了管理和维护的代价。对开发者来说，IvorySQL提供了简单的接口、极简的解决方案和与第三方工具的无缝集成。对数据分析专家来说，IvorySQL 提供了便捷的数据访问能力。

* **瀚高支持**：由领先的PostgreSQL数据库提供商瀚高股份提供支持。

=== 技术生态

IvorySQL基于PostgreSQL，具有完整的SQL、坚如磐石的可靠性和庞大的生态系统。

=== 核心应用场景

Ivory数据库的主要应用场景：

* 企业数据库

  如 ERP、交易系统、财务系统涉及资金、客户等信息，数据不能丢失且业务逻辑复杂，选择 IvorySQL 作为数据底层存储，一是可以帮助您在数据一致性前提下提供高可用性，二是可以用简单的编程实现复杂的业务逻辑。

* 含 LBS 的应用

  大型游戏、O2O 等应用需要支持世界地图、附近的商家，两个点的距离等能力，PostGIS 增加了对地理对象的支持，允许您以 SQL 运行位置查询，而不需要复杂的编码，帮助您更轻松理顺逻辑，更便捷的实现 LBS，提高用户粘性。

* 数据仓库和大数据

  IvorySQL 更多数据类型和强大的计算能力，能够帮助您更简单搭建数据库仓库或大数据分析平台，为企业运营加分。

* 建站或 App

  IvorySQL 良好的性能和强大的功能，可以有效的提高网站性能，降低开发难度。

* 数据库迁移

  如果需要将Oracle数据库迁移到PostgreSQL数据库，可以直接使用IvorySQL数据库进行迁移。

== 主要、基本功能

IvorySQL是一个功能强大的开源对象关系数据库管理系统(ORDBMS)。 用于安全地存储数据; 支持最佳做法，并允许在处理请求时检索它们。除此之外，还兼容了Oracle的语法，适用于使用Oracle的场景。

IvorySQL已经兼容了Oracle的大部分语法，而且我们开发了 https://www.ivorysql.org/docs/Global%20Unique%20Index/create_global_unique_index[全局唯一索引]功能。

== 与Oracle的兼容性

* https://www.ivorysql.org/zh-CN/docs/next/Compatibillity_Features/parameter_settings[兼容配置参数]
* https://www.ivorysql.org/zh-CN/docs/next/Compatibillity_Features/package[包]
* https://www.ivorysql.org/zh-CN/docs/next/Compatibillity_Features/alter_table[更改表]
* https://www.ivorysql.org/zh-CN/docs/next/Compatibillity_Features/delete_table[删除表]
* https://www.ivorysql.org/zh-CN/docs/next/Compatibillity_Features/update_table[更新表]
* https://www.ivorysql.org/zh-CN/docs/next/Compatibillity_Features/groupby[Group By]
* https://www.ivorysql.org/zh-CN/docs/next/Compatibillity_Features/union[UNION]
* https://www.ivorysql.org/zh-CN/docs/next/Compatibillity_Features/minus[MINUS Operator]
* https://www.ivorysql.org/zh-CN/docs/next/Compatibillity_Features/escape-character[转义字符]
* https://www.ivorysql.org/zh-CN/docs/next/Compatibillity_Features/sequence[序列]
* https://www.ivorysql.org/zh-CN/docs/next/Compatibillity_Features/datefuncs[兼容时间和日期函数]
* https://www.ivorysql.org/zh-CN/docs/next/Compatibillity_Features/conversion_function[转换和比较以及与NULL相关的函数]
* https://www.ivorysql.org/zh-CN/docs/next/Compatibillity_Features/nls_length_semantics[NLS_LENGTH_SEMANTICS参数]
* https://www.ivorysql.org/zh-CN/docs/next/Compatibillity_Features/nvarchar2[NVARCHAR2(size)]
* https://www.ivorysql.org/zh-CN/docs/next/Compatibillity_Features/varchar2[VARCHAR2(size)]
* https://www.ivorysql.org/zh-CN/docs/next/Compatibillity_Features/number[NUMBER [ (p [, s\]) ]]
* https://www.ivorysql.org/zh-CN/docs/next/Compatibillity_Features/plisql[PL/iSQL]
* https://www.ivorysql.org/zh-CN/docs/next/Compatibillity_Features/hierarchical#层级查询[层级查询]
* https://www.ivorysql.org/zh-CN/docs/next/Compatibillity_Features/string_function[字符串函数]